海龟汤提问时的向量化匹配